--- a/serverless.yml
+++ b/serverless.yml
@@ -12,8 +12,10 @@ provider:
   name: aws
   runtime: python3.8
   lambdaHashingVersion: '20201221'
-  memory: 128
+  memorySize: 128
   timeout: 5
+  tracing:
+    lambda: true
 
 functions:
   api:
