--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "devDependencies": {
     "serverless-python-requirements": "^5.1.0",
-    "serverless-wsgi": "^1.7.6"
+    "serverless-wsgi": "^1.7.6",
+    "serverless-plugin-scripts": "^1.0.2"
   }
 }
