--- a/serverless.yml
+++ b/serverless.yml
@@ -10,16 +10,22 @@ custom:
     prod: ''
   wsgi:
     app: app.app
+  hostedZone:
+    name: api.sillium.xyz.
   customDomain:
     domainName: tagesthemen.api.sillium.xyz
-    certificateName: '*.api.sillium.xyz'
-    hostedZoneId: Z04645421K92MX0ACC0PF
+    certificateName: 'tagesthemen.api.sillium.xyz'
     basePath: ${self:custom.basepath.${self:provider.stage}}
     stage: ${self:provider.stage}
     createRoute53Record: true
+  customCertificate:
+    certificateName: 'tagesthemen.api.sillium.xyz'
+    hostedZoneNames: 'api.sillium.xyz.'
+    region: eu-east-1
+    rewriteRecords: false
   scripts:
     hooks:
-      'before:deploy:deploy': serverless create_domain --stage ${self:provider.stage} --verbose
+      'before:deploy:deploy': serverless create-zone; serverless create-cert; serverless create_domain --stage ${self:provider.stage} --verbose
 
 provider:
   name: aws
@@ -42,6 +48,10 @@ functions:
           method: ANY
 
 plugins:
+  - serverless-hosted-zone
   - serverless-wsgi
   - serverless-python-requirements
   - serverless-plugin-scripts
+  - serverless-domain-manager
+  - serverless-certificate-creator
+
