--- a/serverless.yml
+++ b/serverless.yml
@@ -15,7 +15,7 @@ custom:
     domainName: tagesthemen.sillium.org
     certificateName: 'tagesthemen.sillium.org'
     basePath: ${self:custom.basePath.${self:custom.stage}}
-    hostedZoneId: ${param:hostedZoneId}
+#    hostedZoneId: ${param:hostedZoneId}
     stage: ${self:custom.stage}
     createRoute53Record: true
     autoDomain: true
@@ -23,7 +23,7 @@ custom:
     securityPolicy: tls_1_2
     apiType: rest
 #    certificateArn: ${certificate:${self:custom.customCertificate.certificateName}:CertificateArn}
-    certificateArn: arn:aws:acm:us-east-1:052227503343:certificate/292363c4-fd42-49e9-bfe2-32d8fd2bb75d
+#    certificateArn: arn:aws:acm:us-east-1:052227503343:certificate/292363c4-fd42-49e9-bfe2-32d8fd2bb75d
   customCertificate:
     certificateName: 'tagesthemen.sillium.org'
     hostedZoneNames: 'sillium.org.'
@@ -31,7 +31,8 @@ custom:
     rewriteRecords: false
   scripts:
     hooks:
-      'before:deploy:deploy': export SLS_DEBUG=*; serverless create-cert --stage ${self:custom.stage}; serverless delete_domain --stage ${self:custom.stage}; serverless create_domain --stage ${self:custom.stage} --verbose
+#      'before:deploy:deploy': export SLS_DEBUG=*; serverless create-cert --stage ${self:custom.stage}; serverless delete_domain --stage ${self:custom.stage}; serverless create_domain --stage ${self:custom.stage} --verbose
+      'before:deploy:deploy': export SLS_DEBUG=*; serverless remove-cert --stage ${self:custom.stage}; serverless delete_domain --stage ${self:custom.stage}
 
 provider:
   name: aws
