--- a/serverless.yml
+++ b/serverless.yml
@@ -22,7 +22,7 @@ custom:
     endpointType: regional
     securityPolicy: tls_1_2
     apiType: rest
-#    certificateArn: ${param:certificateArn}
+    certificateArn: ${param:certificateArn}
   scripts:
     hooks:
 #      'before:deploy:deploy': export SLS_DEBUG=*; serverless delete_domain --stage ${self:custom.stage}; serverless create_domain --stage ${self:custom.stage} --verbose
@@ -54,5 +54,3 @@ plugins:
   - serverless-python-requirements
   - serverless-plugin-scripts
   - serverless-domain-manager
-  - serverless-certificate-creator
-
