--- a/serverless.yml
+++ b/serverless.yml
@@ -21,7 +21,8 @@ custom:
     certificateArn: ${param:certificateArn}
   scripts:
     hooks:
-      'before:deploy:deploy': export SLS_DEBUG=*; serverless create_domain --stage ${self:custom.stage};
+#      'before:deploy:deploy': export SLS_DEBUG=*; serverless create_domain --stage ${self:custom.stage};
+      'before:deploy:deploy': export SLS_DEBUG=*; serverless delete_domain --stage ${self:custom.stage};
 
 provider:
   name: aws
