--- a/serverless.yml
+++ b/serverless.yml
@@ -7,9 +7,9 @@ frameworkVersion: '2'
 custom:
   stage: ${opt:stage}
   dev: 
-    domainName: tagesthemen.dev.sillium.org
+    domainName: flask-tv-api.dev.sillium.org
   prod:
-    domainName: tagesthemen.sillium.org
+    domainName: flask-tv-api.sillium.org
   wsgi:
     app: app.app
   customDomain:
