--- a/serverless.yml
+++ b/serverless.yml
@@ -7,12 +7,9 @@ frameworkVersion: '2'
 custom:
   stage: ${opt:stage}
   dev: 
-    domainName: tagesthemen.dev.sillium.org
+    domainName: flask-tv-api.dev.sillium.org
   prod:
-    domainName: tagesthemen.sillium.org
-  domainName:
-    dev: tagesthemen.dev.sillium.org
-    prod: tagesthemen.sillium.org
+    domainName: flask-tv-api.sillium.org
   wsgi:
     app: app.app
   customDomain:
@@ -47,5 +44,4 @@ functions:
 plugins:
   - serverless-wsgi
   - serverless-python-requirements
-#  - serverless-plugin-scripts
   - serverless-domain-manager
