--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "serverless-python-requirements": "^5.1.0",
     "serverless-wsgi": "^1.7.6",
-    "serverless-domain-manager": "^5.2.0"
+    "serverless-domain-manager": "^5.2.0",
+    "serverless-api-gateway-caching": "^1.7.4"
   }
 }
