--- a/serverless.yml
+++ b/serverless.yml
@@ -22,7 +22,7 @@ custom:
   apiGatewayCaching:
     enabled: true
     clusterSize: '0.5'
-    ttlInSeconds: 300
+    ttlInSeconds: 3600
     dataEncrypted: false
 
 provider:
@@ -64,7 +64,7 @@ functions:
       API_GATEWAY_ID: {Ref: ApiGatewayRestApi}
       STAGE: ${self:custom.stage}
     events:
-      - schedule: cron(* * ? * * *)
+      - schedule: cron(1 * ? 22-23 * *) # UTC, DST/no DST
 
 plugins:
   - serverless-wsgi
