--- a/serverless.yml
+++ b/serverless.yml
@@ -34,6 +34,7 @@ provider:
   memorySize: 128
   timeout: 15
   region: eu-central-1
+  deploymentBucket: sillium-apis-serverless-deployments
   tracing:
     lambda: true
   stackTags:
