--- a/serverless.yml
+++ b/serverless.yml
@@ -7,9 +7,9 @@ frameworkVersion: '2'
 custom:
   stage: ${opt:stage}
   dev: 
-    domainName: tagesthemen.dev.sillium.org
+    domainName: ${self:service}.dev.sillium.org
   prod:
-    domainName: tagesthemen.sillium.org
+    domainName: ${self:service}.sillium.org
   wsgi:
     app: app.app
   customDomain:
@@ -19,11 +19,6 @@ custom:
     createRoute53Record: true
     hostedZoneId: ${param:hostedZoneId}
     certificateArn: ${param:certificateArn}
-  apiGatewayCaching:
-    enabled: false
-#    clusterSize: '0.5' # USD 0.02 per hour
-#    ttlInSeconds: 3600
-#    dataEncrypted: false
 
 provider:
   name: aws
@@ -51,33 +46,11 @@ functions:
       - http:
           path: /
           method: GET
-#          apiGatewayCaching:
-#            enabled: true
       - http:
           path: /{proxy+}
           method: GET
-#          apiGatewayCaching:
-#            enabled: true
-#            cacheKeyParameters:
-#              - name: request.path.proxy
-
-#  invalidateCache:
-#    handler: invalidateCache.run
-#    iamRoleStatements:
-#      - Effect: "Allow"
-#        Action:
-#          - "apigateway:DELETE"
-#        Resource:
-#          - "*"
-#    environment:
-#      API_GATEWAY_ID: {Ref: ApiGatewayRestApi}
-#      STAGE: ${self:custom.stage}
-#    events:
-#      - schedule: cron(1 22-23 ? * * *) # UTC, DST/no DST
 
 plugins:
   - serverless-wsgi
   - serverless-python-requirements
   - serverless-domain-manager
-  - serverless-api-gateway-caching
-  - serverless-iam-roles-per-function
