--- a/serverless.yml
+++ b/serverless.yml
@@ -17,7 +17,7 @@ custom:
     certificate: ${param:certificateArn}
     logging:
       bucket: sillium-apis-cloudfront-logs.s3.amazonaws.com
-      prefix: ${self:service}
+      prefix: ${self:service}/${self:custom.stage}
     cookies: none
   pythonRequirements:
     pythonBin: python3
