--- a/serverless.yml
+++ b/serverless.yml
@@ -6,19 +6,19 @@ frameworkVersion: '2'
 
 custom:
   stage: ${opt:stage}
-  # dev: 
-  #   domainName: dev.${self:service}.sillium.xyz
-  # prod:
-  #   domainName: ${self:service}.sillium.xyz
+  dev: 
+    domainName: dev.${self:service}.sillium.xyz
+  prod:
+    domainName: ${self:service}.sillium.xyz
   wsgi:
     app: app.app
-  # apiCloudFront:
-  #   domain: ${self:custom.${self:custom.stage}.domainName}
-  #   certificate: ${param:certificateArn}
-  #   logging:
-  #     bucket: ${self:app}-${self:custom.stage}-cloudfront-logs.s3.amazonaws.com
-  #     prefix: ${self:service}/${self:custom.stage}
-  #   cookies: none
+  apiCloudFront:
+    domain: ${self:custom.${self:custom.stage}.domainName}
+    certificate: ${param:certificateArn}
+    logging:
+      bucket: ${self:app}-${self:custom.stage}-cloudfront-logs.s3.amazonaws.com
+      prefix: ${self:service}/${self:custom.stage}
+    cookies: none
   pythonRequirements:
     pythonBin: python3
 
@@ -56,7 +56,7 @@ functions:
 plugins:
   - serverless-wsgi
   - serverless-python-requirements
-#  - serverless-api-cloudfront
+  - serverless-api-cloudfront
   - serverless-deployment-bucket
   - serverless-s3-remover
 
