--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,6 @@ MarkupSafe==1.1.1
 requests==2.26.0
 soupsieve==2.3.1
 urllib3==1.26.7
-uWSGI==2.0.18
+#uWSGI==2.0.18
 Werkzeug==0.16.0
 pytz==2021.3
